log

vi., 11 de mar. de 2022 12:29:07: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d27ef66
vi., 11 de mar. de 2022 14:29:18: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3734e1e
vi., 11 de mar. de 2022 14:31:03: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
6eb0260
vi., 11 de mar. de 2022 14:58:11: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
cae4e83
vi., 11 de mar. de 2022 15:10:59: 
 exercises.c | 24 ++++++++++++++++++++----
 1 file changed, 20 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:60:14: error: return makes pointer from integer without a cast [-Werror=int-conversion]
       return EXIT_FAILURE;
              ^~~~~~~~~~~~
exercises.c: In function 'crearVector':
exercises.c:88:14: error: return makes pointer from integer without a cast [-Werror=int-conversion]
       return EXIT_FAILURE;
              ^~~~~~~~~~~~
exercises.c:90:11: error: function returns address of local variable [-Werror=return-local-addr]
    return &vctr;
           ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
0dac733
vi., 11 de mar. de 2022 15:13:24: 
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:60:14: error: return makes pointer from integer without a cast [-Werror=int-conversion]
       return EXIT_FAILURE;
              ^~~~~~~~~~~~
exercises.c: In function 'crearVector':
exercises.c:88:14: error: return makes pointer from integer without a cast [-Werror=int-conversion]
       return EXIT_FAILURE;
              ^~~~~~~~~~~~
exercises.c:90:11: error: function returns address of local variable [-Werror=return-local-addr]
    return &vctr;
           ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
820cecf
vi., 11 de mar. de 2022 15:13:44: 
 exercises.c | 20 ++++++++------------
 1 file changed, 8 insertions(+), 12 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'obtenerValor':
exercises.c:104:16: error: return makes integer from pointer without a cast [-Werror=int-conversion]
    else return NULL;
                ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
a1dd706
vi., 11 de mar. de 2022 15:14:21: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  6|2
total_score: 50/70
a3b1593
